feat: Update dependencies and UI for Harper Baseline
Updates React dependency to ^19.2.4 and introduces new UI elements and components for a more interactive experience. This includes enhancements to the Digital Binder and Home pages, along with new utility functions for milestone tracking. The legacy JavaScript entry points have been disabled to resolve conflicts and streamline the build process.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 700: "#334e68",
                 800: "#243b53",
                 900: "#102a43",
+                950: "#081a2d",
               },
               gold: {
                 50: "#fffbeb",
@@ -70,7 +71,8 @@
     "lucide-react": "https://esm.sh/lucide-react@0.460.0",
     "wouter": "https://esm.sh/wouter@3.3.5",
     "@tanstack/react-query": "https://esm.sh/@tanstack/react-query@5.62.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.4/"
+    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
+    "react/": "https://esm.sh/react@^19.2.4/"
   }
 }
 </script>
